// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBox (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00ff00",
      "borderColor": "#00ff00",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "margin": 5,
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={undefined}
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "height": 21,
          "margin": 2,
          "marginBottom": 1,
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "flex": 9,
          "fontFamily": "px_sans_nouveaux",
          "paddingRight": 30,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with image) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00ff00",
      "borderColor": "#00ff00",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "margin": 5,
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "height": 21,
          "margin": 2,
          "marginBottom": 1,
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "flex": 9,
          "fontFamily": "px_sans_nouveaux",
          "paddingRight": 30,
          "textAlign": "center",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with title and image) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00ff00",
      "borderColor": "#00ff00",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "margin": 5,
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "height": 21,
          "margin": 2,
          "marginBottom": 1,
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "flex": 9,
          "fontFamily": "px_sans_nouveaux",
          "paddingRight": 30,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;

exports[`InfoBox (with title) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00ff00",
      "borderColor": "#00ff00",
      "borderRadius": 0,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "column",
      "height": 100,
      "margin": 5,
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={undefined}
      style={
        Object {
          "backgroundColor": "black",
          "borderRadius": 0,
          "flex": 1,
          "height": 21,
          "margin": 2,
          "marginBottom": 1,
          "width": 10,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "flex": 9,
          "fontFamily": "px_sans_nouveaux",
          "paddingRight": 30,
          "textAlign": "center",
        }
      }
    >
      foo
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 3,
        "flexDirection": "column",
        "margin": 1,
      }
    }
  />
</View>
`;
